Attempt to fix build in 16.ea by opening modules and avoiding fake files.